force-app/main/default/objects/Week_Research__c/Week_Research__c.object-meta.xml
<CustomObject>
    <label>门店调查要求</label>
    <nameField>
        <displayFormat>WR-{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>要求编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>门店调查要求</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>