force-app/main/default/objects/Week_Research__c/fields/DuplicateRemark__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRemark__c</fullName>
    <label>*判重标志</label>
    <length>255</length>
    <type>Text</type>
</CustomField>