force-app/main/default/objects/Week_Research__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>起效后方可在促销员日报显示该问题</inlineHelpText>
    <label>是否起效</label>
    <type>Checkbox</type>
</CustomField>