force-app/main/default/objects/Week_Research__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>促销员</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lfjZ</relationshipName>
    <type>Lookup</type>
</CustomField>