force-app/main/default/objects/Week_Research__c/fields/Promoter_Text__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Text__c</fullName>
    <label>促销员</label>
    <length>255</length>
    <type>Text</type>
</CustomField>