force-app/main/default/objects/Week_Research__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>门店调查要求</relationshipLabel>
    <relationshipName>Shop_Research</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>