force-app/main/default/objects/Week_Research__c/fields/Shop_Text__c.field-meta.xml
<CustomField>
    <fullName>Shop_Text__c</fullName>
    <label>门店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>