force-app/main/default/objects/Week_Research__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>Promoter_Text__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>